# wintagma-sw

./: .gitignore  README.md
.github/: android-ci.yml  backend-ci.yml
.github/workflows/: backend-ci.yml
android/: gradle.properties  settings.gradle.kts
android/android/: build.gradle.kts  proguard-rules.pro
android/android/schemas/com.wintagma.android.data.local.db.WintagmaDatabase/: 1.json
android/android/src/main/: AndroidManifest.xml
android/android/src/main/assets/seed/: seed_v2_1.json
android/android/src/main/java/com/wintagma/android/: MainActivity.kt  WintagmaAppRoot.kt
android/android/src/main/res/drawable/: ic_launcher.xml
android/android/src/main/res/values/: colors.xml  strings.xml  themes.xml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0002_create_exercise_and_exercise_option.py  0003_load_initial_content.py  20251207_125308_create_category_lexical_item.py
backend/app/: main.py
backend/app/api/: content.py  exercise.py  validate.py
backend/app/core/: config.py  db.py  exercise_memory.py  exercise_service.py
backend/app/db/: base.py
backend/app/models/: __init__.py  category.py  exercise.py  exercise_option.py  lexical_item.py
backend/app/schemas/: category.py  lexical_item.py
backend/tests/: __init__.py  test_api_generate_exercise.py  test_api_validate_exercise.py  test_core_exercise_service.py  test_core_memory_no_repetition.py  test_integration_backend_flow.py  test_models_category_lexical_item.py  test_models_exercise.py
(+47 files in other folders)
