[project]
name = "wintagma-backend"
version = "0.1.0"
description = "Backend FastAPI para Wintagma SW (MVP v1.4)"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<0.30",
  "sqlalchemy>=2.0,<2.1",
  "psycopg[binary]>=3.1,<3.2",
  "alembic>=1.13,<2.0",
  "pydantic>=2.0,<3.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
